[package]
name = "adc"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # デバッグシンボルがあってもFlashに書き込むサイズは変わらないのでデバッグ用につけておく
opt-level = "z"

[dependencies]
esp-idf-sys = { version = "0.34", features = ["binstart"] }
esp-idf-hal = "0.43.1"
# log = { version = "0.4.17", default-features = false }
# esp-idf-sys = { version = "0.33", default-features = false }
# esp-idf-hal = { version = "0.41", optional = true, default-features = false }
# esp-idf-svc = { version = "0.46", optional = true, default-features = false }
# embedded-svc = { version = "0.25", optional = true, default-features = false }
nobcd = "0.2.0"

[build-dependencies]
embuild = "0.31.2"
anyhow = "1"

# [features]
# default = ["std", "hal", "esp-idf-sys/native"]
