[package]
name = "i2c_as5600"
version = "0.1.0"
authors = ["taku-y <taku.yoshioka.4096@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "i2c_as5600"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal = { version = "0.45.2" }
as5600 = { git = "https://github.com/barafael/as5600-rs" }
anyhow = "1.0.98"

[build-dependencies]
embuild = "0.33"
